# NextTick7

./: .gitignore  .pre-commit-config.yaml  README.md  analyze_data.py  project_structure.md  pyproject.toml  requirements.txt
.cursor/rules/: python-main-rules.mdc
data/processed/: AAPL_ML_backtest_results.csv  AAPL_ML_trades.csv  AAPL_TA_backtest_results.csv  AAPL_TA_trades.csv  AAPL_comparison_results.csv  AAPL_processed.parquet  ADBE_ML_backtest_results.csv  ADBE_ML_trades.csv  ADBE_TA_backtest_results.csv  ADBE_TA_trades.csv  ADBE_comparison_results.csv  ADBE_processed.parquet  AMZN_ML_backtest_results.csv  AMZN_ML_trades.csv  AMZN_TA_backtest_results.csv  AMZN_TA_trades.csv  AMZN_comparison_results.csv  AMZN_processed.parquet  CMCSA_ML_backtest_results.csv  CMCSA_ML_trades.csv  CMCSA_TA_backtest_results.csv  CMCSA_TA_trades.csv  CMCSA_comparison_results.csv  CMCSA_processed.parquet  CSCO_ML_backtest_results.csv  CSCO_ML_trades.csv  CSCO_TA_backtest_results.csv  CSCO_TA_trades.csv  CSCO_comparison_results.csv  CSCO_processed.parquet  GOOGL_ML_backtest_results.csv  GOOGL_ML_trades.csv  GOOGL_TA_backtest_results.csv  GOOGL_TA_trades.csv  GOOGL_comparison_results.csv  GOOGL_processed.parquet  IBM_ML_backtest_results.csv  IBM_ML_trades.csv  IBM_TA_backtest_results.csv  IBM_TA_trades.csv  (+62 more)
models/: AAPL_lstm.pth  ADBE_lstm.pth  AMZN_lstm.pth  CMCSA_lstm.pth  CSCO_lstm.pth  GOOGL_lstm.pth  IBM_lstm.pth  INTC_lstm.pth  META_lstm.pth  MSFT_lstm.pth  NFLX_lstm.pth  NVDA_lstm.pth  ORCL_lstm.pth  QCOM_lstm.pth  SAP_lstm.pth  TSLA_lstm.pth  TSM_lstm.pth
src/nexttick/: config.py  (+2 more)
(+40 files in other folders)
